cluster/agentgateway/gateways/internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      port: 22
      protocol: TCP
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.sko.ai"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: sko-ai-tls
    - name: https-veroso
      protocol: HTTPS
      port: 443
      hostname: "*.veroso.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: veroso-com-tls
    - name: https-veroso-apex
      protocol: HTTPS
      port: 443
      hostname: "veroso.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: veroso-com-tls
