cluster/agentgateway/gateways/public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.sko.ai"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: sko-ai-tls
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "sko.ai"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: sko-ai-tls
    - name: https-veroso
      protocol: HTTPS
      port: 443
      hostname: "*.veroso.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: veroso-com-tls
    - name: https-veroso-apex
      protocol: HTTPS
      port: 443
      hostname: "veroso.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: veroso-com-tls
    - name: https-leane
      protocol: HTTPS
      port: 443
      hostname: "*.leane.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: leane-dev-tls
    - name: https-leane-apex
      protocol: HTTPS
      port: 443
      hostname: "leane.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: leane-dev-tls
